--- a/src/json/config.json
+++ b/src/json/config.json
@@ -1,6 +1,6 @@
 {
-    "token": "ODY3MTY5NDI2NzMzNDAwMTA0.YPdMdg.UzOaddbiRiSVx5DmY4f-ADasa8M",
+    "token": "",
     "prefix" : "lp!",
-    "client_secret" : "YwEpWrHzZALTjJIZKNUb49iNyo95fX5E",
-    "client_id" : "867169426733400104"
+    "client_secret" : "",
+    "client_id" : ""
 }
