--- a/src/json/config.json
+++ b/src/json/config.json
@@ -1,6 +1,6 @@
 {
-    "token": "ODg4MTY5MjY3NTI5NDA0NDc1.YUOyFg.aWJ3uw94eqRbh7yYk13fXJMWuD8",
+    "token": "",
     "prefix" : "lp!",
-    "client_secret" : "YwEpWrHzZALTjJIZKNUb49iNyo95fX5E",
+    "client_secret" : "",
     "client_id" : "867169426733400104"
 }
