--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lipestudios",
-  "version": "2.1.0",
+  "name": "lipebotv2",
+  "version": "2.4.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,15 +12,18 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
+    "better-sqlite3": "^7.5.0",
     "canvacord": "^5.2.3",
     "colors": "^1.4.0",
     "currency-formatter": "^1.5.9",
+    "dicionario.js": "^1.1.1-b",
     "discord-together": "^1.1.62",
-    "discord.js": "^13.1.0",
+    "discord.js": "^13.7.0",
     "moment": "^2.29.1",
     "node-fetch": "^2.6.6",
     "os": "^0.1.2",
     "parse-ms": "^2.1.0",
+    "quick.db": "^7.1.3",
     "request": "^2.88.2",
     "search-npm-registry": "^2.0.3",
     "shelljs": "^0.8.5",
@@ -28,7 +31,6 @@
     "systeminformation": "^5.9.17",
     "vulkava": "^1.1.3",
     "weather-js": "^2.0.0",
-    "ytdownload": "^2.0.0",
-    "quick.db": "^7.1.3"
+    "ytdownload": "^2.0.0"
   }
 }
