--- a/src_lipebot/json/config.json
+++ b/src_lipebot/json/config.json
@@ -1,6 +1,6 @@
 {
-    "token": "ODg4MTY5MjY3NTI5NDA0NDc1.YUOyFg.7BIEKMTpZBMaqF04JdkLe3-ShqE",
-    "prefix" : "lpst!",
+    "token": "",
+    "prefix" : "lp!",
     "client_secret" : "YwEpWrHzZALTjJIZKNUb49iNyo95fX5E",
     "client_id" : "867169426733400104",
 
